--- a/WhatsforDinner/Base.lproj/Main.storyboard
+++ b/WhatsforDinner/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="5Gb-Hi-cGo">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="T8H-EJ-zTR">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -57,9 +57,9 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GK1-DZ-uHP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-682" y="38"/>
+            <point key="canvasLocation" x="2478" y="-651"/>
         </scene>
-        <!--View Controller-->
+        <!--What's for dinner?-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
@@ -71,20 +71,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pk9-N7-p74">
-                                <rect key="frame" x="36" y="318" width="303" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Did you know?..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rrl-Ok-nSc">
-                                <rect key="frame" x="124" y="40" width="126" height="21"/>
+                                <rect key="frame" x="124" y="84" width="126" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BEF-Zm-SDv">
-                                <rect key="frame" x="26" y="121" width="323" height="21"/>
+                                <rect key="frame" x="26" y="165" width="323" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4il-uL-2Uv">
+                                <rect key="frame" x="161" y="448" width="53" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Lets Go"/>
+                                <connections>
+                                    <segue destination="Bld-74-7fd" kind="show" identifier="selectCategories" id="4dp-Mv-FXC"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select the button below to choose from available categories" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="caC-KF-DDP">
+                                <rect key="frame" x="8" y="323" width="359" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -92,24 +100,82 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="caC-KF-DDP" secondAttribute="trailing" constant="8" id="122-w8-oZ4"/>
                             <constraint firstItem="rrl-Ok-nSc" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="4ly-zS-yPj"/>
-                            <constraint firstItem="pk9-N7-p74" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="CtM-AS-wiw"/>
-                            <constraint firstItem="pk9-N7-p74" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Q7G-7j-wZ7"/>
                             <constraint firstItem="BEF-Zm-SDv" firstAttribute="top" secondItem="rrl-Ok-nSc" secondAttribute="bottom" constant="60" id="QMD-2j-mC9"/>
                             <constraint firstAttribute="trailingMargin" secondItem="BEF-Zm-SDv" secondAttribute="trailing" constant="10" id="SIn-Ti-r5i"/>
                             <constraint firstItem="BEF-Zm-SDv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="VbK-o5-sAb"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="pk9-N7-p74" secondAttribute="trailing" constant="20" id="aLS-3A-e5p"/>
                             <constraint firstItem="rrl-Ok-nSc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bOD-OF-K71"/>
-                            <constraint firstItem="pk9-N7-p74" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="lq4-SH-jCM"/>
+                            <constraint firstItem="caC-KF-DDP" firstAttribute="top" secondItem="BEF-Zm-SDv" secondAttribute="bottom" constant="137" id="iKu-hC-MBi"/>
+                            <constraint firstItem="caC-KF-DDP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="8" id="iRY-ds-m71"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="What's for dinner?" id="I1o-dr-2Rp"/>
                     <connections>
                         <outlet property="foodTriviaLabel" destination="BEF-Zm-SDv" id="3eL-Sd-Nwn"/>
-                        <outlet property="searchTextField" destination="pk9-N7-p74" id="V3z-Pa-Ta4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="916" y="-645"/>
+        </scene>
+        <!--Choose Meal Preference-->
+        <scene sceneID="r5y-iV-5Tg">
+            <objects>
+                <tableViewController id="Bld-74-7fd" customClass="MealCategoryTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="OmE-wr-J5a">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" textLabel="MfD-lv-8RK" style="IBUITableViewCellStyleDefault" id="IaY-cw-yS8">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IaY-cw-yS8" id="YEw-nz-Z7b">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="MfD-lv-8RK">
+                                            <rect key="frame" x="15" y="0.0" width="345" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Bld-74-7fd" id="hQY-Rg-MVz"/>
+                            <outlet property="delegate" destination="Bld-74-7fd" id="7us-Tt-s91"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Choose Meal Preference" id="GpE-bC-7X9">
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="wSs-d7-cvk"/>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eh9-6r-k47" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1697" y="-645"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="O5x-PJ-jPg">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="T8H-EJ-zTR" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="HKi-qe-VXI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="xdC-7c-P2N"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nUL-nA-V0X" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="205.59999999999999" y="-645.42728635682158"/>
         </scene>
     </scenes>
 </document>
