--- a/WhatsforDinner/RecipeCardCell.xib
+++ b/WhatsforDinner/RecipeCardCell.xib
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -16,14 +15,14 @@
             <rect key="frame" x="0.0" y="0.0" width="250" height="300"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="PdC-xZ-ceo">
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="PdC-xZ-ceo">
                     <rect key="frame" x="8" y="8" width="234" height="284"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6PE-tq-5aK">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6PE-tq-5aK">
                             <rect key="frame" x="0.0" y="0.0" width="234" height="206"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recipe Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="klL-d2-Hs7">
-                            <rect key="frame" x="66.5" y="206" width="101.5" height="78"/>
+                            <rect key="frame" x="66.5" y="226" width="101.5" height="58"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -33,10 +32,10 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="bottomMargin" secondItem="PdC-xZ-ceo" secondAttribute="bottom" id="51u-9q-B0e"/>
-                <constraint firstItem="PdC-xZ-ceo" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="Cjt-kF-TT4"/>
-                <constraint firstItem="PdC-xZ-ceo" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" id="Lv6-Mh-bHe"/>
-                <constraint firstAttribute="trailingMargin" secondItem="PdC-xZ-ceo" secondAttribute="trailing" id="xJf-20-ugw"/>
+                <constraint firstItem="PdC-xZ-ceo" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="3Iv-qj-vs2"/>
+                <constraint firstAttribute="bottom" secondItem="PdC-xZ-ceo" secondAttribute="bottom" constant="8" id="JB8-Su-5MJ"/>
+                <constraint firstAttribute="trailing" secondItem="PdC-xZ-ceo" secondAttribute="trailing" constant="8" id="iDP-ln-SDM"/>
+                <constraint firstItem="PdC-xZ-ceo" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="kJj-4b-dlP"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
